--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
           node-version: '16'  # Updated Node.js version
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
       - name: Release
         env:
