feat: add version file

--- a/.releaserc
+++ b/.releaserc
@@ -1,10 +1,18 @@
 {
-  "branches": ["main"],
+  "branches": [
+    "main"
+  ],
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
     "@semantic-release/changelog",
     "@semantic-release/github",
+    [
+      "@semantic-release/exec",
+      {
+        "prepareCmd": "echo \"__version__='${nextRelease.version}'\" > version.py"
+      }
+    ],
     "@semantic-release/git"
   ]
 }
