--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^10.1.1",
     "semantic-release": "^24.0.0"
+  },
+  "dependencies": {
+    "@semantic-release/exec": "^6.0.3"
   }
 }
